# omscompare

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: CMakeLists.txt
src/app/: CMakeLists.txt  client.cpp  client.h  client_state.cpp  client_state_base.cpp  client_state_boost.cpp  client_state_boost_hashed.cpp  client_state_duckdb.cpp  client_state_duckdb_setup.cpp  client_state_sqlite.cpp  client_state_sqlite_setup.cpp  client_state_template_btree.cpp  client_state_template_hashed.cpp  idtype.cpp  main.cpp  metrics.cpp  uuid.cpp  uuid.h  workflows.cpp  workflows.h
src/containers/: CMakeLists.txt  basket.h  fill.h  order.h  route.h
src/containers/types/: CMakeLists.txt  basket.h  error.h  fill.h  idtype.cpp  idtype.h  order.h  route.h
src/include/: basket.h  boost_btree_storage.h  boost_hashed_storage.h  boost_storage.h  client.h  client_state.h  client_state_base.h  client_state_boost.h  client_state_boost_hashed.h  client_state_duckdb.h  client_state_sqlite.h  client_state_templ.h  client_state_template.h  client_templ.h  fill.h  metrics.h  order.h  route.h  uuid.h  workflows.h  workflows_templ.h
src/include/boost/: basket.h  fill.h  order.h  route.h
src/include/boost_hashed/: basket.h  fill.h  order.h  route.h
src/include/types/: CMakeLists.txt  basket.h  fill.h  idtype.h  order.h  route.h
src/model/: CMakeLists.txt  client.cpp  client.h  client_state.cpp  client_state.h  metrics.cpp  metrics.h
src/omsb/: CMakeLists.txt  order.h
src/omstypes/: CMakeLists.txt  basket.h  fill.h  order.h  route.h
src/sqlite/: CMakeLists.txt
